2006-08-01 figure.py: savefig() update docstring to add support for 'format'
           argument.
           backend_cairo.py: print_figure() add support 'format' argument. - SC

2006-07-31 Added shallowcopy() methods to all Transformations;
           removed copy_bbox_transform and copy_bbox_transform_shallow
           from transforms.py;
           added offset_copy() function to transforms.py to
           facilitate positioning artists with offsets.
           See examples/transoffset.py. - EF

2006-07-31 Don't let postscript's xpdf distiller compress images - DSD

2006-07-29 Fixed numerix polygon bug reported by Nick Fotopoulos.
           Added inverse_numerix_xy() transform method.
           Made autoscale_view() preserve axis direction
           (e.g., increasing down).- EF

2006-07-28 Added shallow bbox copy routine for transforms -- mainly
           useful for copying transforms to apply offset to. - JDH

2006-07-28 Added resize method to FigureManager class
           for Qt and Gtk backend - CM

2006-07-28 Added subplots_adjust button to Qt backend - CM

2006-07-26 Use numerix more in collections.
           Quiver now handles masked arrays. - EF

2006-07-22 Fixed bug #1209354 - DSD

2006-07-22 make scatter() work with the kwarg "color". Closes bug
           1285750 - DSD

2006-07-20 backend_cairo.py: require pycairo 1.2.0.
           print_figure() update to output SVG using cairo.

2006-07-19 Added blitting for Qt4Agg - CM

2006-07-19 Added lasso widget and example examples/lasso_demo.py - JDH

2006-07-18 Added blitting for QtAgg backend - CM

2006-07-17 Fixed bug #1523585: skip nans in semilog plots - DSD

2006-07-12 Add support to render the scientific notation label
           over the right-side y-axis - DSD

===============================================================
2006-07-11 Released 0.87.4 at revision 2558

2006-07-07 Fixed a usetex bug with older versions of latex - DSD

2006-07-07 Add compatibility for NumPy 1.0 - TEO
