@@ -1,6 +1,10 @@
+2006-08-01 Fixed a bug in postscript's rendering of dashed lines - DSD
+
 2006-08-01 figure.py: savefig() update docstring to add support for 'format'
            argument.
            backend_cairo.py: print_figure() add support 'format' argument. - SC
+
+2006-07-31 Don't let postscript's xpdf distiller compress images - DSD
 
 2006-07-31 Added shallowcopy() methods to all Transformations;
            removed copy_bbox_transform and copy_bbox_transform_shallow
